Fix: 상품 조회 시 캐시 JSON 타입 변환(Integer -> Long)